# rusqlite_migration

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/from-directory/: Cargo.toml  build.rs
examples/from-directory/migrations/01-friend_car/: up.sql
examples/from-directory/migrations/02-add_birthday_column/: up.sql
examples/from-directory/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
rusqlite_migration/: Cargo.toml  README.md  build.rs
rusqlite_migration/benches/: README.md  criterion.rs  from_directory.rs  gen_migrations.sh  iai.rs
rusqlite_migration/benches/100_migrations/1-comment/: up.sql
rusqlite_migration/benches/100_migrations/10-comment/: up.sql
rusqlite_migration/benches/100_migrations/100-comment/: down.sql
rusqlite_migration/benches/100_migrations/12-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/13-comment/: down.sql
rusqlite_migration/benches/100_migrations/14-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/15-comment/: up.sql
rusqlite_migration/benches/100_migrations/16-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/17-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/18-comment/: down.sql
rusqlite_migration/benches/100_migrations/19-comment/: up.sql
rusqlite_migration/benches/100_migrations/2-comment/: up.sql
rusqlite_migration/benches/100_migrations/20-comment/: up.sql
rusqlite_migration/benches/100_migrations/21-comment/: down.sql
rusqlite_migration/benches/100_migrations/22-comment/: up.sql
rusqlite_migration/benches/100_migrations/23-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/24-comment/: up.sql
rusqlite_migration/benches/100_migrations/25-comment/: down.sql
rusqlite_migration/benches/100_migrations/27-comment/: up.sql
rusqlite_migration/benches/100_migrations/29-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/30-comment/: up.sql
rusqlite_migration/benches/100_migrations/31-comment/: down.sql
rusqlite_migration/benches/100_migrations/33-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/34-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/36-comment/: down.sql
rusqlite_migration/benches/100_migrations/37-comment/: down.sql
rusqlite_migration/benches/100_migrations/38-comment/: up.sql
rusqlite_migration/benches/100_migrations/4-comment/: down.sql
rusqlite_migration/benches/100_migrations/40-comment/: up.sql
rusqlite_migration/benches/100_migrations/41-comment/: down.sql
rusqlite_migration/benches/100_migrations/42-comment/: up.sql
rusqlite_migration/benches/100_migrations/43-comment/: down.sql
rusqlite_migration/benches/100_migrations/44-comment/: up.sql
rusqlite_migration/benches/100_migrations/45-comment/: down.sql
rusqlite_migration/benches/100_migrations/46-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/47-comment/: down.sql
rusqlite_migration/benches/100_migrations/48-comment/: up.sql
rusqlite_migration/benches/100_migrations/49-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/5-comment/: down.sql
rusqlite_migration/benches/100_migrations/50-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/51-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/52-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/53-comment/: up.sql
rusqlite_migration/benches/100_migrations/54-comment/: down.sql
rusqlite_migration/benches/100_migrations/55-comment/: down.sql
rusqlite_migration/benches/100_migrations/56-comment/: down.sql
rusqlite_migration/benches/100_migrations/57-comment/: down.sql
rusqlite_migration/benches/100_migrations/58-comment/: down.sql
rusqlite_migration/benches/100_migrations/60-comment/: up.sql
rusqlite_migration/benches/100_migrations/62-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/63-comment/: up.sql
rusqlite_migration/benches/100_migrations/64-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/66-comment/: down.sql
rusqlite_migration/benches/100_migrations/67-comment/: down.sql
rusqlite_migration/benches/100_migrations/68-comment/: down.sql
rusqlite_migration/benches/100_migrations/69-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/70-comment/: up.sql
rusqlite_migration/benches/100_migrations/71-comment/: up.sql
rusqlite_migration/benches/100_migrations/72-comment/: down.sql
rusqlite_migration/benches/100_migrations/73-comment/: up.sql
rusqlite_migration/benches/100_migrations/74-comment/: up.sql
rusqlite_migration/benches/100_migrations/75-comment/: up.sql
rusqlite_migration/benches/100_migrations/76-comment/: down.sql
rusqlite_migration/benches/100_migrations/77-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/78-comment/: down.sql  up.sql
rusqlite_migration/benches/100_migrations/79-comment/: up.sql
rusqlite_migration/benches/100_migrations/8-comment/: up.sql
rusqlite_migration/benches/100_migrations/80-comment/: down.sql  (+1 more)
rusqlite_migration/src/: asynch.rs  builder.rs  errors.rs  fk_check.rs  lib.rs  loader.rs  tests.rs
rusqlite_migration/src/errors/: tests.rs
rusqlite_migration/src/tests/: asynch.rs  builder.rs  core.rs  display.rs  fk_check.rs  helpers.rs  mod.rs  synch.rs
rusqlite_migration/src/validations/: mod.rs  tests.rs
rusqlite_migration_benches/: Cargo.toml
rusqlite_migration_benches/benches/: criterion.rs  iai.rs
rusqlite_migration_tests/: Cargo.toml
rusqlite_migration_tests/tests/: async_from_directory_test.rs  async_integration_test.rs  async_up_and_down.rs  from_directory_test.rs  integration_test.rs  lib.rs  migrations_builder_from_iterator_test.rs  migrations_builder_test.rs  multiline_test.rs  up_and_down.rs
rusqlite_migration_tokio_async/: Cargo.toml  README.md
rusqlite_migration_tokio_async/src/: lib.rs
(+221 files in other folders)
