[package]
name = "rusqlite_migration"
version = "0.5.0"
authors = ["Clément Joly <l@131719.xyz>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple schema migration library for rusqlite using user_version instead of an SQL table to maintain the current schema version."
keywords = ["rusqlite", "sqlite", "user_version", "database", "migration"]
categories = ["database"]
readme = "README.md"
homepage = "https://cj.rs/rusqlite_migration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.rusqlite]
version = ">=0.17"
default-features = false
features = []

[dev-dependencies]
simple-logging = "2.0.2"
env_logger = "0.9"
anyhow = "1"
lazy_static = "1.4.0"
mktemp = "0.4"
