[workspace.package]
authors = ["Clément Joly <foss@131719.xyz>"]
categories = ["database"]
description = "Simple schema migration library for rusqlite using user_version instead of an SQL table to maintain the current schema version."
homepage = "https://cj.rs/rusqlite_migration"
keywords = ["rusqlite", "sqlite", "user_version", "database", "migration"]
license = "Apache-2.0"
repository = "https://github.com/cljoly/rusqlite_migration"
rust-version = "1.84"
version = "2.0.1"

[workspace]
members = [
  "rusqlite_migration",
  "rusqlite_migration_tests",
  "examples/*",
]
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
