[package]
edition = "2021"
name = "rusqlite_migration"
readme = "README.md"

authors.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# Locally, run:
#     RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
# Document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
### Enable support for async migrations with the use of `tokio-rusqlite`
alpha-async-tokio-rusqlite = ["dep:tokio-rusqlite", "dep:tokio"]

### Enable loading migrations from *.sql files in a given directory
from-directory = ["dep:include_dir"]

[dependencies]
include_dir = { version = "0.7.4", optional = true }
log = "0.4"
tokio-rusqlite = { version = "0.5.0", optional = true }

[dependencies.tokio]
version = "1.40"
features = ["macros"]
optional = true

[dependencies.rusqlite]
version = "0.31.0"
default-features = false
features = []

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
iai = "0.1"
insta = "1.40.0"
lazy_static = "1.5.0"
mktemp = "0.5"
mutants = "0.0.3"
simple-logging = "2.0.2"
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4.4"

[dev-dependencies.criterion]
version = "0.5.0"
features = ["html_reports", "cargo_bench_support"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
