[package]
edition = "2021"
name = "rusqlite_migration"
readme = "README.md"

authors.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# Locally, run:
#     RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
# Document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []

### Enable loading migrations from *.sql files in a given directory
from-directory = ["dep:include_dir"]

[dependencies]
include_dir = { version = "0.7.4", optional = true }
log = "0.4"

[dependencies.rusqlite]
version = "0.37.0"
default-features = false
features = []

[dev-dependencies]
anyhow = "1"
insta = "1.44.3"
mutants = "0.0.3"

[dev-dependencies.env_logger]
version = "0.11"
default-features = false

