[package]
name = "rusqlite_migration_tests"
edition = "2018"
readme = "README.md"
publish = false

authors.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.39", features = ["macros"] }
log = "0.4"

[dependencies.rusqlite_migration]
path = "../rusqlite_migration"
features = ["from-directory"]

[dependencies.rusqlite]
version = "0.32.1"
features = ["extra_check"]

[dev-dependencies]
tokio-test = "0.4.4"
simple-logging = "2.0.2"
env_logger = "0.10"
anyhow = "1"
lazy_static = "1.5.0"
mktemp = "0.5"
include_dir = "0.7.4"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
