[package]
name = "rusqlite_migration_tests"
edition = "2018"
readme = "README.md"
publish = false

authors.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log = "0.4"

[dependencies.rusqlite_migration]
path = "../rusqlite_migration"
features = ["from-directory"]

[dependencies.rusqlite]
version = "0.33.0"
features = ["extra_check"]

[dev-dependencies]
simple-logging = "2.0.2"
env_logger = "0.11"
anyhow = "1"
mktemp = "0.5"
include_dir = "0.7.4"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
