[package]
name = "rusqlite_migration_tokio_async"
version = "0.0.1-alpha1"
authors = ["Clément Joly <foss@131719.xyz>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple schema migration library for rusqlite using user_version instead of an SQL table to maintain the current schema version."
keywords = ["rusqlite", "sqlite", "user_version", "database", "migration"]
categories = ["database"]
readme = "README.md"
homepage = "https://cj.rs/rusqlite_migration"
repository = "https://github.com/cljoly/rusqlite_migration/tree/master/rusqlite_migration_tokio_async"
