[package]
name = "example-async"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
anyhow = "1"
mktemp = "0.5"
tokio-rusqlite-new = "=0.11.0"
tokio = { version = "1.47.0", features = ["full"] }

[dependencies.rusqlite_migration]
path = "../../rusqlite_migration"

[dependencies.rusqlite]
version = "0.37.0"
default-features = false
features = []

[dependencies.env_logger]
version = "0.11"
default-features = false
