[package]
name = "example-async"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
anyhow = "1"
mktemp = "0.5"
rusqlite = { workspace = true }
tokio-rusqlite-new = "=0.13.0"
tokio = { version = "1.51.1", features = ["full"] }

[dependencies.rusqlite_migration]
path = "../../rusqlite_migration"

[dependencies.env_logger]
version = "0.11"
default-features = false
