[package]
name = "example-from-directory"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
simple-logging = "2.0.2"
env_logger = "0.11"
anyhow = "1"
mktemp = "0.5"
include_dir = "0.7.4"

[dependencies.rusqlite_migration]
path = "../../rusqlite_migration"
features = ["from-directory"]

[dependencies.rusqlite]
version = "0.35.0"
default-features = false
features = []
