[package]
name = "example-from-directory"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "0.4"
anyhow = "1"
mktemp = "0.5"
include_dir = "0.7.4"
rusqlite = { workspace = true }

[dependencies.rusqlite_migration]
path = "../../rusqlite_migration"
features = ["from-directory"]

[dependencies.env_logger]
version = "0.11"
default-features = false
