[package]
name = "example-simple"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
rusqlite_migration = { path = "../../rusqlite_migration" }
log = "0.4"
simple-logging = "2.0.2"
env_logger = "0.11"
anyhow = "1"
lazy_static = "1.5.0"
mktemp = "0.5"

[dependencies.rusqlite]
version = "0.31.0"
features = ["extra_check"] # A realistic use case
